# Exec

./: .gitignore  CMakeLists.txt  README.md  exec.hpp
examples/: CMakeLists.txt
examples/async_task/: CMakeLists.txt  async_task.cpp
examples/completion_signatures/: CMakeLists.txt  completion_signatures.cpp
examples/counting_scopes/: CMakeLists.txt  counting_scopes.cpp
examples/error_handling/: CMakeLists.txt  error_handling.cpp
examples/simple_task/: CMakeLists.txt  simple_task.cpp
examples/thread_pool/: CMakeLists.txt  thread_pool.cpp
include/: CMakeLists.txt  exec.hpp
include/exec/: allocator.hpp  associate.hpp  completion_signatures.hpp  completions.hpp  continues_on.hpp  counting_scope.hpp  counting_scopes.hpp  env.hpp  forward_progress_guarantee.hpp  forwarding_query.hpp  just.hpp  let.hpp  operation_state.hpp  pipe_adapter.hpp  query.hpp  queryable.hpp  receiver.hpp  run_loop.hpp  schedule_from.hpp  scheduler.hpp  scope_association.hpp  scope_token.hpp  sender.hpp  sender_adapter_closure.hpp  simple_counting_scope.hpp  spawn.hpp  spawn_future.hpp  starts_on.hpp  stop_token.hpp  sync_wait.hpp  then.hpp  transform_completion_signatures.hpp
include/exec/details/: as_tuple.hpp  association.hpp  base_stop_callback.hpp  basic_closure.hpp  basic_sender.hpp  conditional_meta_apply.hpp  counting_scope_state.hpp  decayed_tuple.hpp  default_completion_signatures.hpp  dummy_receiver.hpp  emplace_from.hpp  forward_env.hpp  gather_signatures.hpp  indirect_meta_apply.hpp  is_nothrow_signatures.hpp  join_env.hpp  meta_add.hpp  meta_append.hpp  meta_bind.hpp  (+23 more)
